# telegram_bot_template

./: README.md  pyproject.toml
src/: __main__.py  container.py
src/app/interfaces/: uow.py
src/app/interfaces/repository/: factory.py  role.py  user.py
src/app/services/: user.py  user_service.py
src/app/services/crud/: role.py  user.py
src/domain/entities/: pydantic.py  role.py  user.py
src/domain/models/: user.py
src/infrastructure/database/: db.py  uow.py
src/infrastructure/database/models/: role.py  user.py
src/infrastructure/database/repository/: factory.py  role.py  user.py
src/infrastructure/mapper/: pydantic.py  role.py  user.py
src/persistence/db/: __init__.py  db.py
src/persistence/db/models/: base.py  user.py
src/persistence/db/models/mixins/: int_id.py  timestamp.py
src/persistence/db/repositories/: user.py
